<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_songs"
        android:icon="@drawable/ic_music_note"
        android:title="@string/tab_songs" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/tab_favorites" />
    <item
        android:id="@+id/nav_videos"
        android:icon="@drawable/ic_videocam"
        android:title="@string/tab_videos" />
    <item
        android:id="@+id/nav_albums"
        android:icon="@drawable/ic_album"
        android:title="@string/tab_albums" />
    <item
        android:id="@+id/nav_artists"
        android:icon="@drawable/ic_person"
        android:title="@string/tab_artists" />
</menu>